--- a/index.html
+++ b/index.html
@@ -41,7 +41,31 @@
       </section>
 
       <footer class="clearfix">
+        ::before
+        <ul class="navlist left">
+          <li>
+            <a href="#">Advertising</a>
+          </li>
+          <li>
+            <a href="#">Business</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+        </ul>
 
+        <ul class="navlist right">
+          <li>
+            <a href="#">Privacy</a>
+          </li>
+          <li>
+            <a href="#">Terms</a>
+          </li>
+          <li>
+            <a href="#">Settings</a>
+          </li>
+        </ul>
+        ::after
       </footer>
 
     </div>
