removed ::before / ::after tags

--- a/index.html
+++ b/index.html
@@ -1,73 +1,72 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Google</title>
     <link type="text/css" rel="stylesheet" href="stylesheet.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="navigation">
-      <nav>
-        <ul class="navlist right">
-          <li>
-            <a href="#">Gmail</a>
-          </li>
-          <li>
-            <a href="#">Images</a>
-          </li>
-          <li>
-            <a href="#">
-              <img class="grid" src="images/grid.png">
-            </a>
-          </li>
-          <li>
-            <a id="sign-in" href="#">Sign In</a>
-          </li>
-        </ul>
-      </nav>
-      <section>
-        <div class="logo-container">
-          <img class="logo" src="images/logo.png">
-        </div>
-        <div class="search">
-          <input class="box" type="text" name="searchbox" id="searchbox">
-          <img class="voice" src="images/voice.png">
-        </div>
-        <div class="buttons">
-          <input class="search-area" type="submit" name="search"
-            value="Google Search" id="search">
-          <input class="search-area" type="submit" name="lucky"
-            value="I'm Feeling Luck!" id="lucky">
-        </div>
-      </section>
+        <nav>
+            <ul class="navlist right">
+                <li>
+                    <a href="#">Gmail</a>
+                </li>
+                <li>
+                    <a href="#">Images</a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img class="grid" src="images/grid.png">
+                    </a>
+                </li>
+                <li>
+                    <a id="sign-in" href="#">Sign In</a>
+                </li>
+            </ul>
+        </nav>
+        <section>
+            <div class="logo-container">
+                <img class="logo" src="images/logo.png">
+            </div>
+            <div class="search">
+                <input class="box" type="text" name="searchbox" id="searchbox">
+                <img class="voice" src="images/voice.png">
+            </div>
+            <div class="buttons">
+                <input class="search-area" type="submit" name="search" value="Google Search" id="search">
+                <input class="search-area" type="submit" name="lucky" value="I'm Feeling Luck!" id="lucky">
+            </div>
+        </section>
 
-      <footer class="clearfix">
-        ::before
-        <ul class="navlist left">
-          <li>
-            <a href="#">Advertising</a>
-          </li>
-          <li>
-            <a href="#">Business</a>
-          </li>
-          <li>
-            <a href="#">About</a>
-          </li>
-        </ul>
+        <footer class="clearfix">
+            <ul class="navlist left">
+                <li>
+                    <a href="#">Advertising</a>
+                </li>
+                <li>
+                    <a href="#">Business</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+            </ul>
 
-        <ul class="navlist right">
-          <li>
-            <a href="#">Privacy</a>
-          </li>
-          <li>
-            <a href="#">Terms</a>
-          </li>
-          <li>
-            <a href="#">Settings</a>
-          </li>
-        </ul>
-        ::after
-      </footer>
+            <ul class="navlist right">
+                <li>
+                    <a href="#">Privacy</a>
+                </li>
+                <li>
+                    <a href="#">Terms</a>
+                </li>
+                <li>
+                    <a href="#">Settings</a>
+                </li>
+            </ul>
+        </footer>
 
     </div>
-  </body>
+</body>
+
 </html>
